--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -10,16 +10,20 @@
     top: 90px;
     right: 40px;
     z-index: 5;
-  
+
     .cart-items {
-      height: 240px;
-      display: flex;
-      flex-direction: column;
-      overflow: scroll;
+        height: 240px;
+        display: flex;
+        flex-direction: column;
+        overflow: scroll;
     }
-  
+
     button {
-      margin-top: auto;
+        margin-top: auto;
     }
-  }
-  
+
+    .empty-message {
+        font-size: 18px;
+        margin: 15px auto;
+    }
+}
